--- a/src/gui4/windows/kDrive client/kDrive client/Styles/InfomaniakStyles.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/Styles/InfomaniakStyles.xaml
@@ -35,6 +35,7 @@
     <FontWeight x:Key="Infomaniak.Style.FontWeight.Light">Light</FontWeight>
     <FontWeight x:Key="Infomaniak.Style.FontWeight.Normal">Normal</FontWeight>
     <FontWeight x:Key="Infomaniak.Style.FontWeight.SemiBold">SemiBold</FontWeight>
+    <FontWeight x:Key="Infomaniak.Style.FontWeight.SemiLight">SemiLight</FontWeight>
     <FontWeight x:Key="Infomaniak.Style.FontWeight.Bold">Bold</FontWeight>
     <FontWeight x:Key="Infomaniak.Style.FontWeight.ExtraBold">ExtraBold</FontWeight>
 
@@ -117,6 +118,14 @@
            BasedOn="{StaticResource Infomaniak.Style.TextBlock.Base}">
         <Setter Property="FontWeight"
                 Value="{StaticResource Infomaniak.Style.FontWeight.SemiBold}" />
+        <Setter Property="FontSize"
+                Value="{StaticResource Infomaniak.Style.FontSize.Subtitle}" />
+    </Style>
+    <Style x:Key="Infomaniak.Style.TextBlock.SubtitleSl"
+           TargetType="TextBlock"
+           BasedOn="{StaticResource Infomaniak.Style.TextBlock.Base}">
+        <Setter Property="FontWeight"
+                Value="{StaticResource Infomaniak.Style.FontWeight.SemiLight}" />
         <Setter Property="FontSize"
                 Value="{StaticResource Infomaniak.Style.FontSize.Subtitle}" />
     </Style>
