--- a/src/gui4/windows/kDrive client/kDrive client/Pages/HomePage.xaml
+++ b/src/gui4/windows/kDrive client/kDrive client/Pages/HomePage.xaml
@@ -36,7 +36,7 @@
             <StackPanel Orientation="Horizontal"
                         Spacing="{StaticResource Infomaniak.Style.Spacing.S}">
                 <TextBlock Style="{StaticResource Infomaniak.Style.TextBlock.Subtitle}">
-                    <Run Text=", vos fichiers sont à jour" />
+                    <Run x:Uid="Page_HomePage_Status_SyncUpToDate" />
                 </TextBlock>
 
                 <ImageIcon Height="16"
@@ -52,7 +52,7 @@
             <StackPanel Orientation="Horizontal"
                         Spacing="{StaticResource Infomaniak.Style.Spacing.S}">
                 <TextBlock Style="{StaticResource Infomaniak.Style.TextBlock.Subtitle}">
-                    <Run Text=", vos fichiers se synchronisent" />
+                    <Run x:Uid="Page_HomePage_Status_SyncInProgress" />
                 </TextBlock>
 
                 <ImageIcon Height="16"
@@ -68,9 +68,8 @@
             <StackPanel Orientation="Horizontal"
                         Spacing="{StaticResource Infomaniak.Style.Spacing.S}">
                 <TextBlock Style="{StaticResource Infomaniak.Style.TextBlock.Subtitle}">
-            <Run Text=", la synchronisation est en pause" />
+            <Run x:Uid="Page_HomePage_Status_SyncInPause" />
                 </TextBlock>
-
                 <ImageIcon Height="16"
                            Width="16">
                     <ImageIcon.Source>
@@ -85,7 +84,7 @@
             <StackPanel Orientation="Horizontal"
                         Spacing="{StaticResource Infomaniak.Style.Spacing.S}">
                 <TextBlock Style="{StaticResource Infomaniak.Style.TextBlock.Subtitle}">
-                    <Run Text=", la synchronisation est en pause" />
+                    <Run x:Uid="Page_HomePage_Status_SyncOffline" />
                 </TextBlock>
 
                 <ImageIcon Height="16"
@@ -125,21 +124,19 @@
                 <StackPanel Grid.Row="1"
                             Spacing="{StaticResource Infomaniak.Style.Spacing.S}">
                     <!-- Title -->
-                    <TextBlock Text="Pas d’activité en cours"
+                    <TextBlock x:Uid="Page_HomePage_Main_SyncUpToDate_Title"
                                FontSize="16"
                                FontWeight="SemiBold"
-                               HorizontalAlignment="Center"
-                               Margin="0,14,0,6" />
+                               HorizontalAlignment="Center" />
 
                     <!-- Description -->
-                    <TextBlock Text="Vos fichiers sont accessibles et synchronisés."
+                    <TextBlock x:Uid="Page_HomePage_Main_SyncUpToDate_Description"
                                FontSize="13"
                                HorizontalAlignment="Center"
-                               TextWrapping="Wrap"
-                               Margin="32,0,32,6" />
+                               TextWrapping="WrapWholeWords" />
 
                     <!-- Link -->
-                    <HyperlinkButton Content="Fermer kDrive"
+                    <HyperlinkButton x:Uid="Page_HomePage_Main_SyncUpToDate_HyperLink"
                                      HorizontalAlignment="Center"
                                      Click="SyncUpToDateHyperlinkButton_Click" />
                 </StackPanel>
@@ -162,21 +159,19 @@
                 <StackPanel Grid.Row="1"
                             Spacing="{StaticResource Infomaniak.Style.Spacing.S}">
                     <!-- Title -->
-                    <TextBlock Text="Synchronisation en cours"
+                    <TextBlock x:Uid="Page_HomePage_Main_SyncInProgress_Title"
                                FontSize="16"
                                FontWeight="SemiBold"
-                               HorizontalAlignment="Center"
-                               Margin="0,14,0,6" />
+                               HorizontalAlignment="Center" />
 
                     <!-- Description -->
-                    <TextBlock Text="Vos fichiers récents sont en train d'être mis à jour."
+                    <TextBlock x:Uid="Page_HomePage_Main_SyncInProgress_Description"
                                FontSize="13"
                                HorizontalAlignment="Center"
-                               TextWrapping="Wrap"
-                               Margin="32,0,32,6" />
+                               TextWrapping="Wrap" />
 
                     <!-- Link -->
-                    <HyperlinkButton Content="Voir les activités"
+                    <HyperlinkButton x:Uid="Page_HomePage_Main_SyncInProgress_HyperLink"
                                      HorizontalAlignment="Center"
                                      Click="SyncInProgressHyperlinkButton_Click" />
                 </StackPanel>
@@ -199,21 +194,19 @@
                 <StackPanel Grid.Row="1"
                             Spacing="{StaticResource Infomaniak.Style.Spacing.S}">
                     <!-- Title -->
-                    <TextBlock Text="Synchronisation en pause"
+                    <TextBlock x:Uid="Page_HomePage_Main_SyncInPause_Title"
                                FontSize="16"
                                FontWeight="SemiBold"
-                               HorizontalAlignment="Center"
-                               Margin="0,14,0,6" />
+                               HorizontalAlignment="Center" />
 
                     <!-- Description -->
-                    <TextBlock Text="La synchronisation est temporairement arrêtée."
+                    <TextBlock x:Uid="Page_HomePage_Main_SyncInPause_Description"
                                FontSize="13"
                                HorizontalAlignment="Center"
-                               TextWrapping="Wrap"
-                               Margin="32,0,32,6" />
+                               TextWrapping="Wrap" />
 
                     <!-- Link -->
-                    <HyperlinkButton Content="Réactiver la synchronisation"
+                    <HyperlinkButton x:Uid="Page_HomePage_Main_SyncInPause_HyperLink"
                                      HorizontalAlignment="Center"
                                      Click="SyncInPauseHyperlinkButton_Click" />
                 </StackPanel>
@@ -237,11 +230,10 @@
                             Spacing="{StaticResource Infomaniak.Style.Spacing.S}">
                     <!-- Title -->
                     <TextBlock Grid.Row="1"
-                               Text="Hors ligne"
+                               x:Uid="Page_HomePage_Main_SyncOffline_Title"
                                FontSize="16"
                                FontWeight="SemiBold"
-                               HorizontalAlignment="Center"
-                               Margin="0,14,0,6" />
+                               HorizontalAlignment="Center" />
 
                     <!-- Description -->
                     <TextBlock x:Name="subtitle"
@@ -251,9 +243,9 @@
                                FontSize="13"
                                HorizontalAlignment="Center"
                                MaxWidth="300">
-                        <Run Text="Vos fichiers locaux restent accessibles." />
+                        <Run x:Uid="Page_HomePage_Main_SyncOffline_Description_Line1" />
                         <LineBreak />
-                        <Run Text="La synchronisation reprendra automatiquement dès que vous serez reconnecté." />
+                        <Run x:Uid="Page_HomePage_Main_SyncOffline_Description_Line2" />
                     </TextBlock>
                 </StackPanel>
             </Grid>
@@ -340,7 +332,7 @@
                         Grid.Row="0"
                         Orientation="Horizontal">
                 <TextBlock Style="{StaticResource Infomaniak.Style.TextBlock.SubtitleSl}">
-                    <Run Text="Bonjour" />
+                    <Run x:Uid="Page_HomePage_Hello" />
                     <Run Text="{x:Bind ViewModel.SelectedSync.Drive.User.Name, Mode=OneWay}" />
                 </TextBlock>
                 <ContentControl ContentTemplateSelector="{StaticResource SyncStatusMessageTemplateSelector}"
